manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: "my-82249961new"
spec:
    ports:
    - port: 8080 
    selector:
        app: 82249961new
