manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82249961new-ingress"
spec:
  ingressClassName: nginx
  rules:
  - host: "argocd.cepg-82249961new.sa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: 82249961new
            port:
              number: 8080
        pathType: Prefix
